--- a/comments-app/nginx.conf
+++ b/comments-app/nginx.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location /graphql {
-        proxy_pass http://localhost:8888;
+        proxy_pass http://backend:8888;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
