--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,7 +5,8 @@ services:
     build: ./comments-app
     ports:
       - "80:80"
-      
+    depends_on:
+      - backend      
     networks:
       - app-network
 
